--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   json_annotation: ^4.9.0
   freezed_annotation: ^3.1.0
   path: ^1.9.1
+  go_router: ^16.2.1
 
 dev_dependencies:
   flutter_test:
