--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   freezed_annotation: ^3.1.0
   path: ^1.9.1
   go_router: ^16.2.1
+  flutter_slidable: ^4.0.1
 
 dev_dependencies:
   flutter_test:
