--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_slidable: ^4.0.1
   flutter_local_notifications: ^19.4.2
   timezone: ^0.10.1
+  permission_handler: ^12.0.1
 
 dev_dependencies:
   flutter_test:
