--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_local_notifications: ^19.4.2
   timezone: ^0.10.1
   permission_handler: ^12.0.1
+  flutter_timezone: ^5.0.0
 
 dev_dependencies:
   flutter_test:
