--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,14 +19,10 @@ jobs:
           distribution: "oracle"
           java-version: "17"
 
-      - uses: dart-lang/setup-dart@v1
-        with:
-          sdk: "3.7.0"
-
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.22.2"
+          flutter-version: "3.27.0" # or latest stable with Dart 3.7+
           channel: "stable"
 
       - name: Install dependencies
