--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,3 +30,9 @@ jobs:
 
       - name: Build APK
         run: flutter build apk --release
+
+      - name: Upload release apk
+        uses: actions/upload-artifact@v3
+        with:
+          name: app-release
+          path: build/app/outputs/flutter-apk/app-release.apk
