--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,3 +36,15 @@ jobs:
         with:
           name: app-release
           path: build/app/outputs/flutter-apk/app-release.apk
+
+      - name: Send APK to Telegram
+        env:
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        run: |
+          FILE_PATH="build/app/outputs/flutter-apk/app-release.apk"
+          FILE_NAME=$(basename "$FILE_PATH")
+          curl -F chat_id=$TELEGRAM_CHAT_ID \
+               -F document=@$FILE_PATH \
+               -F caption="✅ New Flutter build is ready!\n\nRepository: ${{ github.repository }}\nCommit: ${{ github.sha }}" \
+               https://api.telegram.org/bot$TELEGRAM_BOT_TOKEN/sendDocument
