--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   permission_handler: ^12.0.1
   flutter_timezone: ^5.0.0
   flutter_local_notifications: ^19.4.2
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
