--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_timezone: ^5.0.0
   flutter_local_notifications: ^19.4.2
   intl: ^0.20.2
+  supabase_flutter: ^2.10.3
 
 dev_dependencies:
   flutter_test:
