--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_local_notifications: ^19.4.2
   intl: ^0.20.2
   supabase_flutter: ^2.10.3
+  supabase: ^2.10.0
 
 dev_dependencies:
   flutter_test:
